<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/eventname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event" />

    <EditText
        android:id="@+id/eventname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eventname_hint" >
    </EditText>

    <TextView
        android:id="@+id/semester_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/semester" />

    <EditText
        android:id="@+id/semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/semester_hint" >
    </EditText>

    <TextView
        android:id="@+id/year_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/year_hint" >
    </EditText>

    <TextView
        android:id="@+id/tutor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutor" />

    <EditText
        android:id="@+id/tutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tutor_hint" >
    </EditText>

    <TextView
        android:id="@+id/tutor_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutor_email" />

    <EditText
        android:id="@+id/tutor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tutor_email_hint"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info" />

    <EditText
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/info_hint"
        android:inputType="textMultiLine" >
    </EditText>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Button
            android:id="@+id/event_cancel_button"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/event_apply_button"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/apply_button" 
            android:onClick="onClick" />
    </GridLayout>

</LinearLayout>