<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/om_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
	<item
        android:id="@+id/om_nfc"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_is_nfc_supported"/>
	<item
        android:id="@+id/om_repop"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_repop"/>
    <item
        android:id="@+id/om_add_person"
        android:icon="@drawable/ic_menu_add_person"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_person"/>
    <item
        android:id="@+id/om_add_group"
        android:icon="@drawable/add_group"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_group"/>
    <item
        android:id="@+id/om_add_event"
        android:icon="@drawable/add_event"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_add_event"/>

</menu>