<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <TextView
        android:id="@+id/pd_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/pd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint" >
    </EditText>

    <TextView
        android:id="@+id/pd_email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/pd_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" >
    </EditText>    

</LinearLayout>