<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/ed_eventname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event" />

        <EditText
            android:id="@+id/ed_eventname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eventname_hint" >
        </EditText>

        <TextView
            android:id="@+id/ed_semester_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester" />

        <Switch
            android:id="@+id/ed_wintersemester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textOff="Sommer Semester"
            android:textOn="Winter Semester" />

        <TextView
            android:id="@+id/ed_year_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <NumberPicker
            android:id="@+id/np_year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/ed_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

        <EditText
            android:id="@+id/ed_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/info_hint"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

</ScrollView>