<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/about_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about_tv"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/about"
        android:typeface="serif" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Button
            android:id="@+id/about_cancel_button"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/about_apply_button"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/apply_button" />
    </GridLayout>

</LinearLayout>